# tap-aws-cost-explorer

./: meltano.yml  pyproject.toml  tox.ini
tap_aws_cost_explorer/: client.py  streams.py  tap.py
