[tool.poetry]
name = "tap-aws-cost-explorer"
version = "0.0.1"
description = "`tap-aws-cost-explorer` is a Singer tap for AWSCostExplorer, built with the Meltano SDK for Singer Taps."
authors = ["Albert Marrero"]
keywords = [
    "ELT",
    "AWSCostExplorer",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
requests = "^2.32.5"
singer-sdk = "^0.48.1"
boto3 = "^1.38.63"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.25.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-aws-cost-explorer = 'tap_aws_cost_explorer.tap:TapAWSCostExplorer.cli'
