[project]
name = "tap-aws-cost-explorer"
version = "0.0.1"
description = "`tap-aws-cost-explorer` is a Singer tap for AWSCostExplorer, built with the Meltano SDK for Singer Taps."
authors = [{ name = "Albert Marrero" }]
requires-python = "<3.12,>=3.9"
license = "Apache 2.0"
keywords = [
    "ELT",
    "AWSCostExplorer",
]
dependencies = [
    "requests>=2.32.5,<3",
    "singer-sdk>=0.48.1,<0.49",
    "boto3>=1.38.63,<2",
]

[project.scripts]
tap-aws-cost-explorer = "tap_aws_cost_explorer.tap:TapAWSCostExplorer.cli"

[dependency-groups]
dev = [
    "pytest>=6.2.5,<7",
    "tox>=3.24.4,<4",
    "flake8>=3.9.2,<4",
    "black~=21.9b0",
    "pydocstyle>=6.1.1,<7",
    "mypy>=0.910,<0.911",
    "types-requests>=2.25.8,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
