[project]
name = "tap-aws-cost-explorer"
version = "0.0.1"
description = "`tap-aws-cost-explorer` is a Singer tap for AWSCostExplorer, built with the Meltano SDK for Singer Taps."
authors = [{ name = "Albert Marrero" }]
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = [
    "ELT",
    "AWSCostExplorer",
]
dependencies = [
    "requests>=2.32.5,<3",
    "singer-sdk>=0.48.1,<0.49",
    "boto3>=1.38.63,<2",
]

[project.scripts]
tap-aws-cost-explorer = "tap_aws_cost_explorer.tap:TapAWSCostExplorer.cli"

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "typing" },
]
test = [
  "pytest-httpserver>=1.0.8,<2; python_version<'4'",
  "singer-sdk[testing]>=0.23",
]
typing = [
  "mypy>=1.11.1",
  "types-requests",
]

[build-system]
requires = [
  "hatch-vcs==0.4",
  "hatchling==1.27",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"